# ratio

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/src/: main1.cpp  main2.cpp  main3.cpp
libRatio/: CMakeLists.txt
libRatio/doc/: Doxyfile-html.cmake
libRatio/include/: ratio.hpp
libRatio/src/: ratio.cpp
unitTests/: CMakeLists.txt
unitTests/src/: sample_test.cpp  speed_precision_test.cpp
